# raft-rpc

./: CMakeLists.txt  Dockerfile  README.MD
protos/: CMakeLists.txt
protos/src/: raft-date-server.proto
src/: raft-date-client.cc  raft-date-server.cc
